--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
-<button mat-icon-button color="accent">
+<!-- <button mat-icon-button color="accent">
   <mat-icon>home</mat-icon>
-</button>
+</button> -->
+<router-outlet></router-outlet>
