--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,11 +1,14 @@
 <section class="signup-form">
   <form fxLayout="column" fxLayoutAlign="center center" #f="ngForm" (ngSubmit)="onSubmit(f)">
      <mat-form-field>
-       <input type="email" matInput placeholder="Your Email" ngModel name="email">
+       <input type="email" matInput placeholder="Your Email" ngModel name="email" email required #emailInput="ngModel">
+       <mat-error *ngIf="!emailInput.hasError('required')">Email is Invalid</mat-error>
+       <mat-error *ngIf="emailInput.hasError('required')">Email must not be Empty</mat-error>
      </mat-form-field>
-     <mat-form-field>
-       <input type="password" matInput placeholder="Your Password" ngModel name="password">
+     <mat-form-field hintLabel="Should be at least 8 characters long!!!!">
+       <input type="password" matInput placeholder="Your Password" ngModel name="password" required minlength="8" #pwInput="ngModel">
      </mat-form-field>
+     <mat-hint align="end">{{pwInput.value?.length}} / 8</mat-hint>
      <button type="submit" mat-raised-button color="primary">Submit</button>
   </form>
 </section>
