--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -9,8 +9,13 @@
        <input type="password" matInput placeholder="Your Password" ngModel name="password" required minlength="8" #pwInput="ngModel">
      </mat-form-field>
      <mat-hint align="end">{{pwInput.value?.length}} / 8</mat-hint>
+     <mat-form-field>
+       <input matInput [max]="maxDate" [matDatepicker]="picker" placeholder="Your birthdate">
+       <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+       <mat-datepicker #picker></mat-datepicker>
+     </mat-form-field>
      <button type="submit" mat-raised-button color="primary">Submit</button>
-  </form>
+    </form>
 </section>
 
 <!-- <section id="container">
