--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -10,10 +10,13 @@
      </mat-form-field>
      <mat-hint align="end">{{pwInput.value?.length}} / 8</mat-hint>
      <mat-form-field>
-       <input matInput [max]="maxDate" [matDatepicker]="picker" placeholder="Your birthdate">
+       <input matInput [max]="maxDate" [matDatepicker]="picker" placeholder="Your birthdate" ngModel name="birthdate" required>
        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
        <mat-datepicker #picker></mat-datepicker>
      </mat-form-field>
+  
+     <mat-checkbox ngModel name="agree" required color="primary">Agree to Terms n Conditions</mat-checkbox>
+     
      <button type="submit" mat-raised-button color="primary">Submit</button>
     </form>
 </section>
