--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,5 +1,5 @@
 <section class="signup-form">
-  <form fxLayout="column" fxLayoutAlign="center center" #f="ngForm" (ngSubmit)="onSubmit(f)">
+  <form fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="10px" #f="ngForm" (ngSubmit)="onSubmit(f)">
      <mat-form-field>
        <input type="email" matInput placeholder="Your Email" ngModel name="email" email required #emailInput="ngModel">
        <mat-error *ngIf="!emailInput.hasError('required')">Email is Invalid</mat-error>
@@ -17,7 +17,7 @@
   
      <mat-checkbox ngModel name="agree" required color="primary">Agree to Terms n Conditions</mat-checkbox>
      
-     <button type="submit" mat-raised-button color="primary">Submit</button>
+     <button type="submit" mat-raised-button color="primary" [disabled]="f.invalid">Submit</button>
     </form>
 </section>
 
