3 files modified, 4 added

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -5,3 +5,19 @@ mat-sidenav-conatiner, mat-sidenav-content, mat-sidenav {
 mat-sidenav {
   width: 250px;
 }
+
+a {
+  text-decoration: none;
+  color: white;
+}
+
+a:hover,
+a:active {
+  color: lightgray;
+}
+
+.navigation-items {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
