--- a/src/app/training/new-training/new-training.component.html
+++ b/src/app/training/new-training/new-training.component.html
@@ -1,3 +1,25 @@
-<p>
-  new-training works!
-</p>
+<section class="new-training" fxLayout fxLayoutAlign="center">
+  <mat-card fxFlex.fs="100%" fxFlex="400px">
+    <mat-card-title fxLayoutAlign="center">Time to start a workout!</mat-card-title>
+    <mat-card-content fxLayoutAlign="center">
+          <mat-form-field>
+      <mat-select placeholder="Favourite Food">
+        <mat-option value="crunches">
+          Crunches
+        </mat-option>
+        <mat-option value="touch-toes">
+          Touch Toes
+        </mat-option> 
+        <mat-option value="burpees">
+          Burpees 
+        </mat-option>
+      </mat-select>   
+    </mat-form-field>
+    <!-- Select type of training -->
+    </mat-card-content>
+
+    <mat-card-actions fxLayoutAlign="center">
+      <button type="submit" mat-button>Start</button>
+    </mat-card-actions>
+  </mat-card>
+</section>
