--- a/src/app/training/new-training/new-training.component.html
+++ b/src/app/training/new-training/new-training.component.html
@@ -19,7 +19,7 @@
     </mat-card-content>
 
     <mat-card-actions fxLayoutAlign="center">
-      <button type="submit" mat-button (click)="onStartTraining(">Start</button>
+      <button type="submit" mat-button (click)="onStartTraining()">Start</button>
     </mat-card-actions>
   </mat-card>
 </section>
