--- a/src/app/navigation/sidenav-list/sidenav-list.component.css
+++ b/src/app/navigation/sidenav-list/sidenav-list.component.css
@@ -1,4 +1,4 @@
-a {
+/* a {
   text-decoration: none;
   color: white;
 }
@@ -17,4 +17,15 @@ a:active {
 .nav-caption {
   display: inline-block;
   padding-left: 6px;
+} */
+
+a {
+  text-decoration: none;
+  color: white;
 }
+
+a:hover,
+a:active {
+  color: lightgray;
+}
+
