--- a/src/app/training/training.component.html
+++ b/src/app/training/training.component.html
@@ -1,4 +1,4 @@
-<mat-tab-group>
+<mat-tab-group *ngIf="!ongoingTraining">
   <mat-tab label="New Exercise">
     <app-new-training (trainingStart)="ongoingTraining = true"></app-new-training>
   </mat-tab>
@@ -6,4 +6,4 @@
     <app-past-trainings></app-past-trainings>
   </mat-tab>
 </mat-tab-group>
-<app-current-training></app-current-training>
+<app-current-training *ngIf="ongoingTraining" (trainingExit)="ongoingTraining = false"></app-current-training>
